[package]
name = "auto-trading"
version = "0.1.0"
edition = "2021"
description = "Quantitative Trading Framework"
license = "MIT"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
async-trait = "0.1.71"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.102"
chrono = "0.4.26"
