[package]
name = "auto-trading"
version = "0.3.0"
edition = "2021"
description = "Quantitative Trading Framework"
license = "MIT"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json"] }
chrono = "0.4.26"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.72"
serde_json = "1"
overload = "0.1.1"
