[package]
name = "auto-trading"
version = "0.7.3"
edition = "2021"
description = "backtest, strategy, multiple platforms, quantitative trading framework"
license = "Apache-2.0"
repository = "https://github.com/86maid/auto-trading"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json"] }
chrono = "0.4.26"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.72"
serde_json = "1"
overload = "0.1.1"
